add Token checker, solve one bug, change error handling
